# SIN-Code-Context-Bridge-Skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  lib.doc.md  pyproject.toml  sin-brain.db  tests.doc.md
examples/: bad.doc.md  bad.py  good.doc.md  good.py
hooks/: post_install.doc.md  post_install.sh
lib/: __init__.py  bridge.doc.md  bridge.py  mcp_server.doc.md  mcp_server.py  merger.doc.md  merger.py  sources.doc.md
lib/sources/: __init__.py  base.doc.md  base.py  gitnexus.doc.md  gitnexus.py  local_sqlite.doc.md  local_sqlite.py  sckg.doc.md  sckg.py  sin_brain.doc.md  sin_brain.py
scripts/: __init__.py  sin_context_bridge.doc.md  sin_context_bridge.py
templates/: config.doc.md  config.yaml
tests/: __init__.py  test_bridge.py  test_gitnexus_source.py  test_local_sqlite.py  test_merger.py  test_sckg_source.py  test_sin_brain_source.py
