[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-context-bridge"
version = "0.1.0"
description = "Unified context bridge for AI agents — SCKG + sin-brain + GitNexus + local SQLite in one MCP call"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenSIN-Code"},
]
keywords = ["mcp", "context", "ai-agent", "sckg", "sin-brain", "gitnexus", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]
sckg = ["sin-code-sckg @ file:///Users/jeremy/dev/SIN-Code-Semantic-Codebase-Knowledge-Graphs"]
brain = ["sin-brain @ file:///Users/jeremy/dev/sin-brain"]
gitnexus = []  # external CLI, no pip install
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]
all = [
    "mcp[cli]>=1.2",
    "pytest>=8.0",
]

[project.scripts]
sin-context-bridge = "scripts.sin_context_bridge:app"

# Expose both 'lib' and 'scripts' as importable top-level packages
[tool.setuptools]
py-modules = []

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/Infra-SIN-OpenCode-Stack/tree/main/skills/sin-context-bridge"
Repository = "https://github.com/OpenSIN-Code/Infra-SIN-OpenCode-Stack"
Issues = "https://github.com/OpenSIN-Code/Infra-SIN-OpenCode-Stack/issues"

# ── Tooling ───────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["lib*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
